# Hands-On-Design-Patterns-with-CPP

./: BUILD.md  CMakeLists.txt  conanfile.txt
Chapter04/: CMakeLists.txt
Chapter05/: CMakeLists.txt
Chapter06/: CMakeLists.txt
Chapter07/: CMakeLists.txt
Chapter16/: CMakeLists.txt
